--- a/package.json
+++ b/package.json
@@ -12,19 +12,47 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-collapsible": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-table": "^8.20.6",
     "class-variance-authority": "^0.7.1",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "cmdk": "1.0.0",
+    "country-data-list": "^1.3.4",
+    "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
+    "lucide-react": "^0.469.0",
     "next": "15.1.2",
     "next-intl": "^3.26.2",
+    "next-themes": "^0.4.4",
+    "nuqs": "^2.3.0",
     "react": "^19.0.0",
+    "react-circle-flags": "^0.0.23",
+    "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "styled-components": "^6.1.13"
+    "recharts": "^2.15.0",
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "use-shopping-cart": "^3.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^9.3.0",
     "@types/classnames": "^2.3.0",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -34,6 +62,7 @@
     "eslint-config-next": "15.1.2",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.11",
+    "match-sorter": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
